fix(dashboard): increase contrast of text in code blocks

--- a/dashboard/styles/themes.scss
+++ b/dashboard/styles/themes.scss
@@ -7,3 +7,11 @@ $primary-alt: #da9317;
 // dark mode. dark.scss extends nightshade
 @import "bootstrap-nightshade.scss";
 @import "dark.scss";
+
+code {
+    color: #000000;
+}
+
+html.dark code {
+    color: #ffffff;
+}
